--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "xml-js": "^1.6.11",
-    "xml2js": "^0.4.23",
-    "xmltojson": "^1.3.5"
+    "xml2js": "^0.4.23"
   },
   "scripts": {
     "start": "react-scripts start",
