--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
     "axios": "^1.3.2",
     "buffer": "^6.0.3",
+    "comma-number": "^2.1.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
+    "national-flag-icons": "^1.0.1",
     "react": "^18.2.0",
+    "react-country-flag": "^3.0.2",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-to-pdf": "^0.0.14",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
     "xml-js": "^1.6.11",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "yarn": "^1.22.19"
   },
   "scripts": {
     "start": "react-scripts start",
